--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "node ./bin/www"
   },
   "dependencies": {
     "connect-mongo": "^4.6.0",
@@ -16,7 +16,6 @@
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
     "mongoose": "^6.2.7",
-    "morgan": "~1.9.1",
-    "nodemon": "^2.0.15"
+    "morgan": "~1.9.1"
   }
 }
